objects/Procurement_Savings_Project__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Reference__c</fullName>
        <displayFormat>REF-{0000}</displayFormat>
        <label>Project Reference</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sites__c</fullName>
        <label>Site(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sites</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Procurement Savings Projects</relationshipLabel>
        <relationshipName>Procurement_Savings_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Actuals__c</fullName>
        <label>Total Actuals</label>
        <summarizedField>Procurement_Savings_Project_Forecast__c.Total_Actuals__c</summarizedField>
        <summaryForeignKey>Procurement_Savings_Project_Forecast__c.Procurement_Savings_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Forecast__c</fullName>
        <label>Total Forecast</label>
        <summarizedField>Procurement_Savings_Project_Forecast__c.Total_Forecast__c</summarizedField>
        <summaryForeignKey>Procurement_Savings_Project_Forecast__c.Procurement_Savings_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Procurement Savings Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Procurement Savings Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procurement Savings Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>